stop toggle button from squashing at small size

--- a/_components/Header.css
+++ b/_components/Header.css
@@ -27,6 +27,7 @@ header {
   .logo-link {
     display: flex;
     height: 2.3rem;
+    margin-right: auto;
   }
 
   .logo {
