--- a/overrides.css
+++ b/overrides.css
@@ -117,6 +117,11 @@ that are generated by deno_doc, the tool that powers the API reference documenta
   transform: translate(0, 25%) rotate(225deg);
 }
 
+.highlight {
+  max-width: 100%;
+  
+}
+
 html {
   scroll-timeline: --showScrollTop y;
   scroll-timeline: --showScrollTop vertical;
